# ascii-image-generator

./: .gitignore  README.md  SETUP_SUMMARY.md  TEST_RESULTS.md  pyproject.toml
ascii_art/: __init__.py  __main__.py  cli.py  color.py  core.py  html_output.py  svg_output.py
samples/: beautiful-sunset.html  colorful.html  colorful_plain.txt  colorful_wide.txt  fine_tunes_600px.html  fine_tunes_dots.html  fine_tunes_rainbow.html  fine_tunes_stars.html  gradient_purple_gold.html  landscape.html  landscape_narrow.txt  landscape_plain.txt  logo.html  logo_entry_point.txt  portrait.html  portrait_custom_chars.txt  portrait_plain.txt  sample_output.html  sunset_4color.html  sunset_purple_gold.html
tests/: test_core.py
